--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -233,7 +233,7 @@
                       </li>
                       <li>
                         <a
-                          class="dropdown-item text-success"
+                          class="dropdown-item text-danger"
                           href="{{ url_for_security('logout') }}"
                         >
                           <i class="bi bi-box-arrow-right"></i> Log Out
